# games101_homeworks

./: README.md  main.cpp
homework2/: main.cpp  mark  rasterizer.cpp
homework3/: CMakeLists.txt  main.cpp  mark  rasterizer.cpp
homework4/: CMakeLists.txt  main.cpp
homework5/: CMakeLists.txt  Renderer.cpp  Triangle.hpp  mark
homework6/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Triangle.hpp  mark
